tests/error/misc_errors/functional_continue.py
from tests.error.util import guppy


@guppy
def foo(x: bool) -> int:
    _@functional
    while x:
        if x:
            continue
    return 0
